--- a/vagrant/back/salt_minion.yml
+++ b/vagrant/back/salt_minion.yml
@@ -2,6 +2,9 @@ file_client: local
 file_roots:
   base:
     - /vagrant/salt
+pillar_roots:
+  base:
+    - /vagrant/pillar
 grains:
   roles:
     - database
