--- a/vagrant/web/salt_minion.yml
+++ b/vagrant/web/salt_minion.yml
@@ -1,10 +1,4 @@
-file_client: local
-file_roots:
-  base:
-    - /vagrant/salt
-pillar_roots:
-  base:
-    - /vagrant/pillar
+master: 10.10.10.10
 grains:
   vagrant: true
   roles:
