--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -36,10 +36,22 @@ defaults
 
 listen kazamatsuri 0.0.0.0:80
 	mode http
-	cookie __SERVER insert
-	balance roundrobin
+	
+	stats enable
+	stats hide-version
+	stats refresh 30s
+	stats uri /ha-stats
+	{% for user in pillar['haproxy']['stats_users'] -%}
+	stats auth {{ user.keys()[0] }}:{{ user.values()[0] }}
+	{% endfor -%}
+	stats admin if TRUE
+	
 	option http-server-close
 	timeout http-keep-alive 3000
-	{% for worker in pillar['workers'] %}
+	
+	balance roundrobin
+	cookie __SERVER insert
+	
+	{% for worker in pillar['workers'] -%}
 	server {{ worker.keys()[0] }} {{ worker.values()[0] }} check
-	{% endfor %}
+	{% endfor -%}
