--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -34,7 +34,8 @@ defaults
 	errorfile 503 /etc/haproxy/errors/503.http
 	errorfile 504 /etc/haproxy/errors/504.http
 
-listen kazamatsuri 0.0.0.0:80
+frontend http
+	bind *:80
 	mode http
 	
 	stats enable
@@ -49,9 +50,21 @@ listen kazamatsuri 0.0.0.0:80
 	option http-server-close
 	timeout http-keep-alive 3000
 	
+	default_backend kazamatsuri.org
+	use_backend forum.kazamatsuri.org if { hdr_beg(host) -i forum. }
+	
+backend kazamatsuri.org
 	balance roundrobin
 	cookie __SERVER insert
 	
 	{% for worker in pillar['workers'] -%}
-	server {{ worker.keys()[0] }} {{ worker.values()[0] }} check
+	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 check
+	{% endfor -%}
+
+listen forum.kazamatsuri.org
+	balance roundrobin
+	cookie __SERVER insert
+	
+	{% for worker in pillar['workers'] -%}
+	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:10080 check
 	{% endfor -%}
