--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -58,7 +58,7 @@ backend kazamatsuri.org
 	cookie __SERVER insert
 	
 	{% for worker in pillar['workers'] -%}
-	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 check
+	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 cookie {{ worker.keys()[0] }} check
 	{% endfor -%}
 
 listen forum.kazamatsuri.org
@@ -66,5 +66,5 @@ listen forum.kazamatsuri.org
 	cookie __SERVER insert
 	
 	{% for worker in pillar['workers'] -%}
-	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:10080 check
+	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:10080 cookie {{ worker.keys()[0] }} check
 	{% endfor -%}
