totally going ahead with this joke

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -55,7 +55,7 @@ frontend http
 	
 backend kazamatsuri.org
 	balance roundrobin
-	cookie __SERVER insert
+	cookie bestgirl insert
 	
 	{% for worker in pillar['workers'] -%}
 	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 cookie {{ worker.keys()[0] }} check
@@ -63,7 +63,7 @@ backend kazamatsuri.org
 
 listen forum.kazamatsuri.org
 	balance roundrobin
-	cookie __SERVER insert
+	cookie bestgirl insert
 	
 	{% for worker in pillar['workers'] -%}
 	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:10080 cookie {{ worker.keys()[0] }} check
