--- a/salt/cloud/profiles/digital_ocean.conf
+++ b/salt/cloud/profiles/digital_ocean.conf
@@ -1,6 +1,6 @@
 digitalocean-debian-1024:
   provider: digital_ocean
-  image: Debian 8.2 x64
-  size: 1024MB
+  image: 8.2 x64
+  size: 1GB
   location: {{ pillar['cloud']['digital_ocean']['location'] }}
   private_networking: True
