--- a/salt/cloud/profiles/digital_ocean.conf
+++ b/salt/cloud/profiles/digital_ocean.conf
@@ -1,6 +1,6 @@
-digitalocean-debian-1024:
+debian_1GB:
   provider: digital_ocean
   image: 8.2 x64
-  size: 1GB
+  size: 1gb
   location: {{ pillar['cloud']['digital_ocean']['location'] }}
   private_networking: True
