Default Master IP for minions

--- a/salt/cloud/providers/digital_ocean.conf
+++ b/salt/cloud/providers/digital_ocean.conf
@@ -4,3 +4,5 @@ digital_ocean:
   ssh_key_names: {{ pillar['cloud']['digital_ocean']['key_names'] }}
   ssh_key_file: {{ pillar['cloud']['digital_ocean']['key_file'] }}
   location: {{ pillar['cloud']['digital_ocean']['location'] }}
+  minion:
+    master: {{ pillar['db_host'] }}
