This may fix VM provisioning...
https://github.com/saltstack/salt/issues/25886

--- a/salt/cloud/providers/digital_ocean.conf
+++ b/salt/cloud/providers/digital_ocean.conf
@@ -6,3 +6,4 @@ digital_ocean:
   location: {{ pillar['cloud']['digital_ocean']['location'] }}
   minion:
     master: {{ pillar['db_host'] }}
+    master_type: standard
