HTTP Keep-Alive for server-server too

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -47,7 +47,7 @@ frontend http
 	{% endfor -%}
 	stats admin if TRUE
 	
-	option http-server-close
+	option http-keep-alive
 	timeout http-keep-alive 3000
 	
 	default_backend kazamatsuri.org
