nginx doesn't like OPTIONS

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -56,7 +56,7 @@ frontend http
 backend kazamatsuri.org
 	balance roundrobin
 	cookie bestgirl insert
-	option httpchk
+	option httpchk GET /ghost/signin/
 	
 	{% for worker in pillar['workers'] -%}
 	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 cookie {{ worker.keys()[0] }} check
@@ -65,7 +65,7 @@ backend kazamatsuri.org
 listen forum.kazamatsuri.org
 	balance roundrobin
 	cookie bestgirl insert
-	option httpchk
+	option httpchk GET /about
 	
 	{% for worker in pillar['workers'] -%}
 	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:10080 cookie {{ worker.keys()[0] }} check
