--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -56,7 +56,7 @@ frontend http
 backend kazamatsuri.org
 	balance roundrobin
 	cookie bestgirl insert
-	option httpchk GET /ghost/signin/
+	option httpchk GET /ghost/
 	
 	{% for worker in pillar['workers'] -%}
 	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 cookie {{ worker.keys()[0] }} check
