--- a/salt/cloud/profiles/digital_ocean.conf
+++ b/salt/cloud/profiles/digital_ocean.conf
@@ -4,3 +4,5 @@ debian_1GB:
   size: 1gb
   location: {{ pillar['cloud']['digital_ocean']['location'] }}
   private_networking: True
+  grains:
+    swap: True
