--- a/salt/discourse/web.yml
+++ b/salt/discourse/web.yml
@@ -17,6 +17,7 @@ expose:
 params:
   ## Which Git revision should this container use? (default: tests-passed)
   #version: tests-passed
+  version: 922744c
 
 env:
   LANG: en_US.UTF-8
