Dropping 'workers' list for automatic Mine queries

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -58,8 +58,8 @@ backend kazamatsuri.org
 	cookie bestgirl insert
 	option httpchk GET /ghost/
 	
-	{% for worker in pillar['workers'] -%}
-	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:80 cookie {{ worker.keys()[0] }} check
+	{% for server, addrs in salt['mine.get']('roles:web', 'private_ip_addrs', expr_form='grain').items() -%}
+	server {{ server }} {{ addrs[0] }}:80 cookie {{ server }} check
 	{% endfor -%}
 
 listen forum.kazamatsuri.org
@@ -67,6 +67,6 @@ listen forum.kazamatsuri.org
 	cookie bestgirl insert
 	option httpchk GET /about
 	
-	{% for worker in pillar['workers'] -%}
-	server {{ worker.keys()[0] }} {{ worker.values()[0] }}:10080 cookie {{ worker.keys()[0] }} check
+	{% for server, addrs in salt['mine.get']('roles:web', 'private_ip_addrs', expr_form='grain').items() -%}
+	server {{ server }} {{ addrs[0] }}:10080 cookie {{ server }} check
 	{% endfor -%}
