--- a/salt/cloud/providers/digital_ocean.conf
+++ b/salt/cloud/providers/digital_ocean.conf
@@ -5,5 +5,5 @@ digital_ocean:
   ssh_key_file: {{ pillar['cloud']['digital_ocean']['key_file'] }}
   location: {{ pillar['cloud']['digital_ocean']['location'] }}
   minion:
-    master: {{ pillar['db_host'] }}
+    master: {{ salt['mine.get']('roles:master', 'private_ip_addrs', expr_form='grain').values()[0][0] }}
     master_type: standard
