Check falsiness, not existence

--- a/salt/logging/rsyslog.conf
+++ b/salt/logging/rsyslog.conf
@@ -120,7 +120,7 @@ daemon.*;mail.*;\
 	*.=debug;*.=info;\
 	*.=notice;*.=warn	|/dev/xconsole
 
-{% if 'syslog' in pillar and 'host' in pillar['syslog'] %}
+{% if pillar['syslog']['host'] %}
 #
 # Log to Papertrail
 #
