Listen to kazamatsuri.local explicitly

--- a/salt/ghost/nginx.conf
+++ b/salt/ghost/nginx.conf
@@ -5,7 +5,7 @@ upstream ghost {
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
-    server_name kazamatsuri.org;
+    server_name kazamatsuri.org kazamatsuri.local;
     
     root /srv/www;
     index index.html;
