Rewrite URLs to drop www. if needed

--- a/salt/ghost/nginx.conf
+++ b/salt/ghost/nginx.conf
@@ -79,3 +79,11 @@ server {
         return 301 /introducing-the-clannad-bookclub-win-a-copy-of-clannad-on-steam/;
     }
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name www.kazamatsuri.org www.kazamatsuri.local;
+    
+    return 301 http://www.example.com$request_uri;
+}
