Preserve https in redirects

--- a/salt/ghost/nginx.conf
+++ b/salt/ghost/nginx.conf
@@ -85,5 +85,5 @@ server {
     listen [::]:80;
     server_name www.kazamatsuri.org www.kazamatsuri.local;
     
-    return 301 http://kazamatsuri.org$request_uri;
+    return 301 $scheme://kazamatsuri.org$request_uri;
 }
