--- a/salt/ghost/nginx.conf
+++ b/salt/ghost/nginx.conf
@@ -26,6 +26,10 @@ server {
     
     # Try to resolve real files in the www directory first, fall back to Ghost
     location / {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        
     	try_files $uri $uri/ @ghost;
     	error_page 403 = @ghost;
     }
