Always restart Ghost

--- a/salt/ghost/ghost.service
+++ b/salt/ghost/ghost.service
@@ -10,6 +10,8 @@ Environment=NODE_ENV=production
 WorkingDirectory=/srv/ghost
 ExecStart=/usr/bin/npm start
 TimeoutSec=10
+Restart=always
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
