--- a/salt/ghost/nginx.conf
+++ b/salt/ghost/nginx.conf
@@ -75,6 +75,7 @@ server {
     # Social media redirects (for Youtube annotations)
     location = /twitter { return 301 https://twitter.com/KazamatsuriOrg; }
     location = /facebook { return 301 https://facebook.com/kazamatsuriorg; }
+    location = /patreon { return 301 https://www.patreon.com/user?u=2645941; }
     
     
     
