/go/t/:id redirects to the forum

--- a/salt/ghost/nginx.conf
+++ b/salt/ghost/nginx.conf
@@ -77,6 +77,9 @@ server {
     location = /facebook { return 301 https://facebook.com/kazamatsuriorg; }
     location = /patreon { return 301 https://www.patreon.com/user?u=2645941; }
     
+    # Redirects to the forum (thanks Youtube)
+    rewrite ^/go/t/(.*)$ https://forum.kazamatsuri.org/t/$1;
+    
     
     
     # An email sent out to CLANNAD backers had a typo in this link
