--- a/salt/ghost/ghost.service
+++ b/salt/ghost/ghost.service
@@ -8,7 +8,7 @@ User=ghost
 Group=ghost
 Environment=NODE_ENV=production
 WorkingDirectory=/srv/ghost
-ExecStart=/usr/bin/npm start
+ExecStart=/usr/bin/node index.js
 TimeoutSec=10
 Restart=always
 RestartSec=1
