--- a/salt/discourse/web.yml
+++ b/salt/discourse/web.yml
@@ -30,7 +30,7 @@ env:
   ## TODO: configure connectivity to the databases
   DISCOURSE_DB_SOCKET: ''
   DISCOURSE_DB_USERNAME: discourse
-  DISCOURSE_DB_PASSWORD: {{ pillar['discourse']['db_password'] }}
+  DISCOURSE_DB_PASSWORD: {{ pillar['kazamatsuri']['discourse']['db_password'] }}
   DISCOURSE_DB_HOST: "{{ salt['mine.get']('roles:database', 'private_ip_addrs', expr_form='grain').values()[0][0] }}"
   DISCOURSE_DB_PORT: 5433
   DISCOURSE_REDIS_HOST: "{{ salt['mine.get']('roles:database', 'private_ip_addrs', expr_form='grain').values()[0][0] }}"
