/srv/[site]/www

--- a/salt/nginx/kazamatsuri/nginx.conf
+++ b/salt/nginx/kazamatsuri/nginx.conf
@@ -7,7 +7,7 @@ server {
     listen [::]:80 default_server ipv6only=on;
     server_name kazamatsuri.org kazamatsuri.local;
     
-    root /srv/www;
+    root /srv/kazamatsuri/www;
     index index.html;
     
     charset utf-8;
