No need for a backend with one upstream

--- a/salt/nginx/kazamatsuri/nginx.conf
+++ b/salt/nginx/kazamatsuri/nginx.conf
@@ -1,7 +1,3 @@
-upstream ghost {
-    server unix:/tmp/ghost_kazamatsuri.sock;
-}
-
 server {
     listen 80 default_server;
     listen [::]:80 default_server ipv6only=on;
@@ -54,7 +50,7 @@ server {
     
     # Internal location for Ghost
     location @ghost {
-        proxy_pass http://ghost;
+        proxy_pass http://unix:/tmp/ghost_kazamatsuri.sock;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
