Health checks with Host headers

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -65,7 +65,7 @@ backend kazamatsuri.org
 listen forum.kazamatsuri.org
 	balance roundrobin
 	cookie bestgirl insert
-	option httpchk GET /about
+	option httpchk GET /about HTTP/1.1\r\nHost:forum.kazamatsuri.{{ 'local' if grains.get('vagrant', False) else 'org' }}
 	
 	{% for server, addrs in salt['mine.get']('roles:web', 'private_ip_addrs', expr_form='grain').items() -%}
 	server {{ server }} {{ addrs[0] }}:10080 cookie {{ server }} check
