Updated Podcast URLs

--- a/salt/nginx/kazamatsuri/nginx.conf
+++ b/salt/nginx/kazamatsuri/nginx.conf
@@ -61,9 +61,9 @@ server {
     
     
     # The real Podcast XML file is on Github Pages for easier publishing
-    location /podcast.xml {
-        proxy_pass http://podcast.kazamatsuri.org/feed.xml;
-    }
+    location /podcast.xml { return 302 http://podcast.kazamatsuri.org/feed.xml; }
+    # Podcast MP3s are now on S3
+    location ~ ^/podcast/?(.*)$ { return 302 https://kazamatsuri.s3.amazonaws.com/podcast/$1; }
     
     # This invite link is really hard to say...
     location = /discord { return 301 https://discord.gg/0X5MFPX6tzYABuKo; }
