Avoid needless rewrite invocation

--- a/salt/nginx/kazamatsuri/nginx.conf
+++ b/salt/nginx/kazamatsuri/nginx.conf
@@ -74,7 +74,7 @@ server {
     location = /patreon { return 301 https://www.patreon.com/user?u=2645941; }
     
     # Redirects to the forum (thanks Youtube)
-    rewrite ^/go/t/(.*)$ https://forum.kazamatsuri.org/t/$1;
+    location ~ ^/go/t/(.*)$ { return 302 https://forum.kazamatsuri.org/t/$1; }
     
     
     
