--- a/salt/discourse/web.yml
+++ b/salt/discourse/web.yml
@@ -107,6 +107,7 @@ hooks:
           # - git clone https://github.com/discourse/docker_manager.git
           - git clone https://github.com/discourse/discourse-spoiler-alert.git
           - git clone https://github.com/davidcelis/new_relic-discourse.git
+          - git clone https://github.com/rux-pizza/discourse-awesome-bbcodes.git
 
 ## Remember, this is YAML syntax - you can only have one block with a name
 run:
