--- a/salt/discourse/web.yml
+++ b/salt/discourse/web.yml
@@ -105,7 +105,7 @@ hooks:
         cmd:
           - mkdir -p plugins
           # - git clone https://github.com/discourse/docker_manager.git
-          - git clone https://github.com/discourse/discourse-spoiler-alert.git
+          # - git clone https://github.com/discourse/discourse-spoiler-alert.git
           - git clone https://github.com/davidcelis/new_relic-discourse.git
           - git clone https://github.com/rux-pizza/discourse-awesome-bbcodes.git
 
