Fixed the podcast feed

--- a/salt/nginx/kazamatsuri/nginx.conf
+++ b/salt/nginx/kazamatsuri/nginx.conf
@@ -61,7 +61,7 @@ server {
     
     
     # The real Podcast XML file is on Github Pages for easier publishing
-    location /podcast.xml { return 302 http://podcast.kazamatsuri.org/feed.xml; }
+    location = /podcast.xml { return 302 http://podcast.kazamatsuri.org/feed.xml; }
     # Podcast MP3s are now on S3
     location ~ ^/podcast/?(.*)$ { return 302 https://kazamatsuri.s3.amazonaws.com/podcast/$1; }
     
