--- a/salt/yumemi/yumemi.service
+++ b/salt/yumemi/yumemi.service
@@ -4,8 +4,9 @@ After=network.target
 
 [Service]
 User=nobody
-Group=nobody
-Environment=HUBOT_DISCORD_EMAIL='{{ pillar['yumemi']['discord']['email'] }}' HUBOT_DISCORD_PASSWORD='{{ pillar['yumemi']['discord']['password'] }}'
+Group=nogroup
+Environment="HUBOT_DISCORD_EMAIL={{ pillar['yumemi']['discord']['email'] }}"
+Environment="HUBOT_DISCORD_PASSWORD={{ pillar['yumemi']['discord']['password'] }}"
 ExecStart=/srv/kazamatsuri/yumemi/bin/hubot -a discord
 WorkingDirectory=/srv/kazamatsuri/yumemi
 StdOut=syslog
