Run Yumemi as www-data for now

--- a/salt/yumemi/yumemi.service
+++ b/salt/yumemi/yumemi.service
@@ -3,8 +3,8 @@ Description=Yumemi
 After=network.target
 
 [Service]
-User=nobody
-Group=nogroup
+User=www-data
+Group=www-data
 Environment="HUBOT_DISCORD_EMAIL={{ pillar['yumemi']['discord']['email'] }}"
 Environment="HUBOT_DISCORD_PASSWORD={{ pillar['yumemi']['discord']['password'] }}"
 ExecStart=/srv/kazamatsuri/yumemi/bin/hubot -a discord
