--- a/salt/discourse/data.yml
+++ b/salt/discourse/data.yml
@@ -52,16 +52,16 @@ hooks:
 
         raise_on_fail: false
 {% for site in pillar['sites'][1:] %}
-    - exec: sudo -u postgres createdb {{ site['id'] }}_discourse || exit 0
+    - exec: sudo -u postgres createdb {{ pillar[site]['id'] }}_discourse || exit 0
     - exec:
          stdin: |
-           grant all privileges on database {{ site['id'] }}_discourse to discourse;
-         cmd: sudo -u postgres psql {{ site['id'] }}_discourse
+           grant all privileges on database {{ pillar[site]['id'] }}_discourse to discourse;
+         cmd: sudo -u postgres psql {{ pillar[site]['id'] }}_discourse
          raise_on_fail: false
     - exec: |
-       /bin/bash -c 'sudo -u postgres psql {{ site['id'] }}_discourse <<< "alter schema public owner to discourse;"'
+       /bin/bash -c 'sudo -u postgres psql {{ pillar[site]['id'] }}_discourse <<< "alter schema public owner to discourse;"'
     - exec: |
-       /bin/bash -c 'sudo -u postgres psql {{ site['id'] }}_discourse <<< "create extension if not exists hstore;"'
+       /bin/bash -c 'sudo -u postgres psql {{ pillar[site]['id'] }}_discourse <<< "create extension if not exists hstore;"'
     - exec: |
-       /bin/bash -c 'sudo -u postgres psql {{ site['id'] }}_discourse <<< "create extension if not exists pg_trgm;"'
+       /bin/bash -c 'sudo -u postgres psql {{ pillar[site]['id'] }}_discourse <<< "create extension if not exists pg_trgm;"'
 {% endfor %}
