--- a/salt/nginx/kazamatsuri/nginx.conf
+++ b/salt/nginx/kazamatsuri/nginx.conf
@@ -50,7 +50,7 @@ server {
     
     # Internal location for Ghost
     location @ghost {
-        proxy_pass http://unix:/tmp/ghost_kazamatsuri.sock;
+        proxy_pass http://unix:/var/run/ghost/kazamatsuri.sock;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
