Reworked HAProxy config

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -50,19 +50,30 @@ frontend http
 	{% endfor -%}
 	stats admin if TRUE
 	
-	default_backend kazamatsuri.org
-	use_backend forum.kazamatsuri.org if { hdr_beg(host) -i forum. }
+	# Strip "www." from URLs
+	acl host_www hdr_beg(host) -i www.
+	reqirep ^Host:\ www.(.*)$ Host:\ \1 if host_www
+	redirect prefix / code 301 if host_www
 	
-backend kazamatsuri.org
+	{% for site in pillar['sites'] -%}
+	{% with domain = pillar[site]['domain_local' if grains.get('vagrant', False) else 'domain'] -%}
+	{% if 'discourse' in pillar[site]['use'] %}use_backend discourse if { hdr_dom(host) -i forum.{{ domain }} }{% endif %}
+	use_backend {{ site }} if { hdr_dom(host) -i {{ domain }} }
+	{% endwith %}
+	{% endfor %}
+
+{% for site in pillar['sites'] %}
+backend {{ site }}
 	balance roundrobin
 	cookie bestgirl insert
-	option httpchk GET /ghost/
+	option httpchk GET {{ pillar[site]['haproxy']['check_url'] }} HTTP/1.1\r\nHost:{{ pillar[site]['domain'] }}
 	
 	{% for server, addrs in salt['mine.get']('roles:web', 'private_ip_addrs', expr_form='grain').items() -%}
 	server {{ server }} {{ addrs[0] }}:80 cookie {{ server }} check
 	{% endfor -%}
+{% endfor %}
 
-listen forum.kazamatsuri.org
+backend discourse
 	balance roundrobin
 	cookie bestgirl insert
 	option httpchk GET /about HTTP/1.1\r\nHost:forum.kazamatsuri.{{ 'local' if grains.get('vagrant', False) else 'org' }}
