Maybe this'll work

--- a/salt/haproxy/haproxy.cfg
+++ b/salt/haproxy/haproxy.cfg
@@ -52,7 +52,7 @@ frontend http
 	
 	# Strip "www." from URLs
 	acl host_www hdr_beg(host) -i www.
-	reqirep ^Host:\ www.(.*)$ Host:\ \1 if host_www
+	reqirep ^Host:\ ?www.(.*)$ Host:\ \1 if host_www
 	redirect prefix / code 301 if host_www
 	
 	{% for site in pillar['sites'] -%}
