Service aliases on DNS (master.local, etc)

--- a/salt/dnsmasq/dnsmasq_hosts.conf
+++ b/salt/dnsmasq/dnsmasq_hosts.conf
@@ -1,3 +1,4 @@
-{% for server, addrs in salt['mine.get']('roles:web', 'private_ip_addrs', expr_form='grain').items() -%}
-{{ addrs[0] }} {{ server }}.local
+{% set mine_grains = salt['mine.get']('*', 'grains.items') -%}
+{% for server, addrs in salt['mine.get']('*', 'private_ip_addrs').items() -%}
+{{ addrs[0] }} {{ server }}.local{% for role in mine_grains.get(server, {}).get('roles', []) %} {{ role }}.local{% endfor %}
 {% endfor %}
