DNS on the master over loopback

--- a/salt/common/resolv.conf
+++ b/salt/common/resolv.conf
@@ -1,3 +1,3 @@
 domain local
 search local
-nameserver {{ salt['mine.get']('roles:master', 'private_ip_addrs', expr_form='grain').values()[0][0] }}
+nameserver {% if 'master' in grains['roles'] %}127.0.0.1{% else %}{{ salt['mine.get']('roles:master', 'private_ip_addrs', expr_form='grain').values()[0][0] }}{% endif %}
