Rokkenjima social redirects

--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -19,12 +19,12 @@ server {
     }
     
     # This invite link is really hard to say...
-    # location = /discord { return 301 https://discord.gg/0X5MFPX6tzYABuKo; }
+    location = /discord { return 301 https://discord.gg/0lT4R2yl29qJKjkc; }
     
     # Social media redirects (for Youtube annotations)
-    # location = /twitter { return 301 https://twitter.com/KazamatsuriOrg; }
-    # location = /facebook { return 301 https://facebook.com/kazamatsuriorg; }
-    # location = /patreon { return 301 https://www.patreon.com/user?u=2645941; }
+    location = /twitter { return 301 https://twitter.com/RokkenjimaOrg; }
+    location = /facebook { return 301 https://facebook.com/rokkenjimaorg; }
+    location = /patreon { return 301 https://www.patreon.com/user?u=2645941; }
     
     # Redirects to the forum (thanks Youtube)
     rewrite ^/go/t/(.*)$ https://forum.rokkenjima.org/t/$1;
