--- a/salt/discourse/data.yml
+++ b/salt/discourse/data.yml
@@ -44,6 +44,11 @@ volumes:
 
 # TODO: SOME_SECRET to a password for the discourse user
 hooks:
+  after_redis:
+    - replace:
+        filename: /etc/redis/redis.conf
+        from: /^bind .*$/
+        to: bind 0.0.0.0
   after_postgres:
     - exec:
         stdin: |
