--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -15,7 +15,40 @@ server {
     
     # Try to resolve real files in the www directory first, fall back to Ghost
     location = / {
-        return 302 https://forum.rokkenjima.org/;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        
+        try_files $uri $uri/ @ghost;
+        error_page 403 = @ghost;
+    }
+    
+    # Bypass Ghost when serving theme assets
+    #location /assets {
+    #    alias /srv/ghost/content/themes/monologue/assets;
+    #    expires 365d;
+    #}
+    
+    # Bypass Ghost when serving internal assets
+    location /content {
+        alias /srv/rokkenjima/ghost/content;
+        expires 365d;
+    }
+    
+    # Bypass Ghost when servince admin assets
+    location /public {
+        alias /srv/rokkenjima/ghost/core/built/public;
+        expires 365d;
+    }
+    
+    # Internal location for Ghost
+    location @ghost {
+        proxy_pass http://unix:/var/run/ghost/rokkenjima.sock;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_buffers 16 1024k;
+        proxy_redirect off;
     }
     
     # This invite link is really hard to say...
