--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -14,7 +14,7 @@ server {
     gzip_comp_level 5;
     
     # Try to resolve real files in the www directory first, fall back to Ghost
-    location = / {
+    location / {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
