--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -30,16 +30,16 @@ server {
     #}
     
     # Bypass Ghost when serving internal assets
-    location /content {
-        alias /srv/rokkenjima/ghost/content;
-        expires 365d;
-    }
+    # location /content {
+    #     alias /srv/rokkenjima/ghost/content;
+    #     expires 365d;
+    # }
     
-    # Bypass Ghost when servince admin assets
-    location /public {
-        alias /srv/rokkenjima/ghost/core/built/public;
-        expires 365d;
-    }
+    # # Bypass Ghost when servince admin assets
+    # location /public {
+    #     alias /srv/rokkenjima/ghost/core/built/public;
+    #     expires 365d;
+    # }
     
     # Internal location for Ghost
     location @ghost {
