Front page redirect

--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -14,6 +14,10 @@ server {
     gzip_comp_level 5;
     
     # Try to resolve real files in the www directory first, fall back to Ghost
+    location = / {
+        return 302 https://forum.rokkenjima.org/;
+    }
+    
     location / {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
