--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -18,7 +18,7 @@ server {
         return 302 https://forum.rokkenjima.org/;
     }
     
-    location / {
+    location /ghost {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
