Monologue fork for Rokkenjima

--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -74,3 +74,22 @@ server {
     
     return 301 $scheme://rokkenjima.org$request_uri;
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name tmp.rokkenjima.org tmp.rokkenjima.local;
+    
+    root /srv/rokkenjima/www;
+    index index.html;
+    
+    charset utf-8;
+    client_max_body_size 48M;
+    
+    location / {
+        proxy_pass http://unix:/var/run/ghost/rokkenjima.sock;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
