Oops, wrong URL

--- a/salt/nginx/rokkenjima/nginx.conf
+++ b/salt/nginx/rokkenjima/nginx.conf
@@ -51,7 +51,7 @@ server {
     }
 
     # Podcast MP3s are on S3
-    location ~ ^/podcast/?(.*)$ { return 302 https://kazamatsuri.s3.amazonaws.com/podcast/$1; }
+    location ~ ^/podcast/?(.*)$ { return 302 https://rokkenjima.s3.amazonaws.com/podcast/$1; }
     
     # This invite link is really hard to say...
     location = /discord { return 301 https://discord.gg/0lT4R2yl29qJKjkc; }
